kubernetes/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
    app.kubernetes.io/version: "1.0"
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  minReadySeconds: 120
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: balena/balena-api:v67.0.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - systemctl
                - is-active
                - --quiet
                - balena-api
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 3
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: http
              scheme: HTTP
            periodSeconds: 6
            timeoutSeconds: 5
            successThreshold: 2
            failureThreshold: 2
          securityContext:
            capabilities:
              add:
                - SYS_RESOURCE
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /sys/fs/cgroup
              name: cgroup
      imagePullSecrets:
        - name: image-pull-secret
      securityContext: {}
      # serviceAccountName: balena-api
      volumes:
        - hostPath:
            path: /sys/fs/cgroup
            type: ""
          name: cgroup

# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   annotations:
#     kompose.cmd: kompose convert -o kubernetes
#     kompose.version: 1.26.1 (HEAD)
#   creationTimestamp: null
#   labels:
#     app: api
#   name: api
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: api
#   strategy:
#     type: Recreate
#   template:
#     metadata:
#       annotations:
#         kompose.cmd: kompose convert -o kubernetes
#         kompose.version: 1.26.1 (HEAD)
#       creationTimestamp: null
#       labels:
#         app: api
#     spec:
#       containers:
#         - env:
#             - name: ADMIN_EMAIL
#               value: bob@balena.local
#             - name: ADMIN_LIST
#               value: bob
#             - name: CONTRACTS_PUBLIC_REPO_NAME
#               value: contracts
#             - name: CONTRACTS_PUBLIC_REPO_OWNER
#               value: balena-io
#             - name: DATABASE_URL
#               value: postgres://docker:docker@db.default.svc.cluster.local:5432/resin
#             - name: DB_GENERAL_REPLICA_MAX_USES
#               value: "1000"
#             - name: DB_GENERAL_REPLICA_PORT
#               value: "5432"
#             - name: DB_HOST
#               value: db
#             - name: DB_PASSWORD
#               value: docker
#             - name: DB_PORT
#               value: "5432"
#             - name: DB_STATE_REPLICA_MAX_USES
#               value: "1000"
#             - name: DB_STATE_REPLICA_PORT
#               value: "5432"
#             - name: DB_USER
#               value: docker
#             - name: DNS_TLD
#               value: bob.local
#             - name: HOSTS_CONFIG
#               value: ALERTMANAGER_HOST:alertmanager,ADMIN_HOST:admin,API_HOST:api,BUILDER_HOST:builder,DATA_HOST:data,DELTA_HOST:delta,DELTA_S3_HOST:s3,DEVICE_URLS_BASE:devices,FILES_HOST:files,GIT_HOST:git,GIT_HOSTNAME:git,IMAGE_MAKER_HOST:img,IMAGE_MAKER_S3_HOST:s3,LOKI_HOST:loki,MONITOR_HOST:monitor,PROXY_HOST:devices,REDIS_HOST:redis,REGISTRY_HOST:registry,REGISTRY2_HOST:registry2,REGISTRY_PROXY_HOST:registry-proxy,SENTRY_DATABASE_HOST:db,SENTRY_REDIS_HOST:redis,SENTRY_URL_HOST:sentry,TOKE [...]
#             - name: IMAGE_STORAGE_BUCKET
#               value: balena-images
#             - name: IMAGE_STORAGE_FORCE_PATH_STYLE
#               value: "true"
#             - name: INTERCOM_APP_ID
#               value: abcdef01234
#             - name: JF_OAUTH_APP_CLIENT_ID
#               value: jellyfish
#             - name: JF_OAUTH_APP_REDIRECT_URI
#               value: https://livechat.ly.fish.local/oauth/callback
#             - name: JSON_WEB_TOKEN_EXPIRY_MINUTES
#               value: "10080"
#             - name: LOKI_PORT
#               value: "9095"
#             - name: LOKI_WRITE_PCT
#               value: "100"
#             - name: MAILGUN_API_KEY
#               value: abcdef01234
#             - name: MAILGUN_DOMAIN
#               value: abcdef01234
#             - name: MDNS_TLD
#               value: bob.local
#             - name: MIXPANEL_API_KEY
#               value: abcdef01234
#             - name: MIXPANEL_API_SECRET
#               value: abcdef01234
#             - name: NUM_WORKERS
#               value: "1"
#             - name: OAUTH_CALLBACK_PROTOCOL
#               value: https
#             - name: PDU_VERSION
#               value: "1"
#             - name: PORT
#               value: "80"
#             - name: PRODUCTION_MODE
#               value: "false"
#             - name: RECURLY_PRIVATE_KEY
#               value: abcdef01234abcdef01234abcdef01234
#             - name: RECURLY_PUBLIC_KEY
#               value: abcdef01234-abcdef01234abcdef01234
#             - name: RECURLY_SUBDOMAIN
#               value: balena-dev
#             - name: REDIS_HOST
#               value: redis:6379
#             - name: REDIS_IS_CLUSTER
#               value: "false"
#             - name: SENTRY_ADMIN_EMAIL
#               value: bob@balena.local
#             - name: TOKEN_AUTH_JWT_ALGO
#               value: ES256
#             - name: TRUST_PROXY
#               value: 172.16.0.0/12
#             - name: TWOFACTOR_ISSUER
#               value: my.devenv.local
#             - name: VERBOSE
#               value: "false"
#             - name: VPN_PORT
#               value: "443"
#           image: balena/balena-api:v61.2.1
#           ports:
#             - containerPort: 80
#               name: http
#           livenessProbe:
#             exec:
#               command:
#                 - /usr/src/app/docker-hc
#             failureThreshold: 3
#             periodSeconds: 45
#             timeoutSeconds: 15
#           name: api
#           resources: {}
#           securityContext:
#             capabilities:
#               add:
#                 - SYS_ADMIN
#                 - SYS_RESOURCE
#           volumeMounts:
#           #   # - mountPath: /certs
#           #   #   name: certs-data
#           #   # - mountPath: /balena
#           #   #   name: resin-data
#             - mountPath: /run
#               name: api-tmpfs0
#             - mountPath: /sys/fs/cgroup
#               name: api-tmpfs1
#       imagePullSecrets:
#         - name: image-pull-secret
#       restartPolicy: Always
#       volumes:
#       #   # - name: certs-data
#       #   #   persistentVolumeClaim:
#       #   #     claimName: certs-data
#       #   # - name: resin-data
#       #   #   persistentVolumeClaim:
#       #   #     claimName: resin-data
#         - emptyDir:
#             medium: Memory
#           name: api-tmpfs0
#         - emptyDir:
#             medium: Memory
#           name: api-tmpfs1
# status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
