kubernetes/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    app: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        app: db
    spec:
      containers:
        - env:
            - name: ADMIN_EMAIL
              value: bob@balena.local
            - name: DNS_TLD
              value: bob.local
            - name: MDNS_TLD
              value: bob.local
            - name: PDU_VERSION
              value: "1"
            - name: SENTRY_ADMIN_EMAIL
              value: bob@balena.local
            - name: VERBOSE
              value: "false"
          image: balena/open-balena-db:v5.1.3
          livenessProbe:
            exec:
              command:
                - pg_isready
            failureThreshold: 3
            periodSeconds: 45
            timeoutSeconds: 15
          name: db
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-data
      restartPolicy: Always
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
  - name: tcp
    port: 5432
    targetPort: 5432
  type: LoadBalancer
