kubernetes/monitor-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: monitor
spec:
  selector:
    io.kompose.service: monitor
  ports:
  - name: http
    port: 80
    targetPort: 8080
